[package]
name = "rust-grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.10.2"
